# fastapi_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: main.py
tests/: test_test.py
