[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["нейки долбаёб"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
skip-string-normalization = false  # двойные кавычки
line-length = 90

[tool.isort]
profile = 'black'
case_sensitive = true
force_single_line = true
remove_redundant_aliases = true
line_length = 90

[tool.pytest.ini_options]
addopts = "--quiet -p no:warnings --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.pylint]
[tool.pylint.master]
jobs = 0
persistent = ['yes']

[tool.pylint.'MESSAGES CONTROL']
disable = ['all']
